[metadata]
name = gem_match
version = 0.1
description = Gem match game.
long_description = file: README.md
long_description_content_type = text/markdown
url = https
author = Chad Larson
author_email = techchad2@gmail.com
license = MIT
license_file = LICENSE

[options]
packages = find:
install_requires:
    pygame >= 2.1.0
python_requires = >= 3.7

[options.package_data]
src.images =
    background.jpg
    *.png

[options.packages.find]
exclude =
    tests*
    tests

[options.entry_points]
console_scripts =
    gem_match = src.gem_match:main